--- a/i18n/fr.yml
+++ b/i18n/fr.yml
@@ -15,6 +15,7 @@ plugins:
       actions: Actions
       total_results: Résultats
       tags: Tags
+      advanced_search: Recherche avancée
     tender:
       title: Intitulé
       description: Description
