--- a/i18n/fr.yml
+++ b/i18n/fr.yml
@@ -17,6 +17,7 @@ plugins:
       total_results: Résultats
       tags: Tags
       advanced_search: Recherche avancée
+      do_search: Chercher
     tender:
       title: Intitulé
       description: Description
