Correction opérateurs de recherche pour les marchés clos, prise en compte des marchés sans date de cloture mais avec attribution

--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -56,6 +56,7 @@ plugins:
     tags:
       open: Ouvert
       closed: Clos
+      unknown: Inconnu
     workgroup:
       name: Nom du groupe de travail
       create: Créer le groupe
